--- a/aradomain.ui
+++ b/aradomain.ui
@@ -119,7 +119,7 @@
    <widget class="QLineEdit" name="AddIP">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>160</x>
       <y>490</y>
       <width>190</width>
       <height>20</height>
@@ -196,7 +196,7 @@
    <widget class="QSpinBox" name="AddIPPort">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>360</x>
       <y>490</y>
       <width>35</width>
       <height>20</height>
@@ -276,7 +276,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>400</x>
       <y>490</y>
       <width>75</width>
       <height>23</height>
@@ -315,7 +315,7 @@
    <widget class="QSpinBox" name="Nodecachesize">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>580</x>
       <y>490</y>
       <width>61</width>
       <height>22</height>
@@ -331,7 +331,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>575</x>
+      <x>485</x>
       <y>490</y>
       <width>91</width>
       <height>20</height>
@@ -352,6 +352,35 @@
     </property>
     <property name="text">
      <string>Open URL in your Browser</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>490</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>My Port:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="myPort">
+    <property name="geometry">
+     <rect>
+      <x>700</x>
+      <y>490</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>65535</number>
+    </property>
+    <property name="value">
+     <number>4444</number>
     </property>
    </widget>
   </widget>
