--- a/aradomain.ui
+++ b/aradomain.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>944</width>
-    <height>557</height>
+    <height>576</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -121,7 +121,7 @@
      <rect>
       <x>160</x>
       <y>490</y>
-      <width>190</width>
+      <width>141</width>
       <height>20</height>
      </rect>
     </property>
@@ -196,7 +196,7 @@
    <widget class="QSpinBox" name="AddIPPort">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>300</x>
       <y>490</y>
       <width>35</width>
       <height>20</height>
@@ -276,7 +276,7 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>400</x>
+      <x>340</x>
       <y>490</y>
       <width>75</width>
       <height>23</height>
@@ -302,7 +302,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>780</x>
+      <x>790</x>
       <y>490</y>
       <width>131</width>
       <height>16</height>
@@ -315,7 +315,7 @@
    <widget class="QSpinBox" name="Nodecachesize">
     <property name="geometry">
      <rect>
-      <x>580</x>
+      <x>520</x>
       <y>490</y>
       <width>61</width>
       <height>22</height>
@@ -331,7 +331,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>485</x>
+      <x>430</x>
       <y>490</y>
       <width>91</width>
       <height>20</height>
@@ -357,9 +357,9 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>690</x>
       <y>490</y>
-      <width>91</width>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
@@ -370,7 +370,7 @@
    <widget class="QSpinBox" name="myPort">
     <property name="geometry">
      <rect>
-      <x>700</x>
+      <x>740</x>
       <y>490</y>
       <width>51</width>
       <height>20</height>
@@ -381,6 +381,29 @@
     </property>
     <property name="value">
      <number>4444</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox">
+    <property name="geometry">
+     <rect>
+      <x>641</x>
+      <y>490</y>
+      <width>41</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>490</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sec Delay:</string>
     </property>
    </widget>
   </widget>
