--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -366,10 +366,13 @@
      <string>Amount of IP-adresses in your IP-cache (1500-5000). Rise up, if all IP-adresses are outdated or offline and connections fail after a start.  Then each minute a request is sent to the boot-IP-connections, to fill the cache for 100%.</string>
     </property>
     <property name="minimum">
-     <number>1000</number>
+     <number>1500</number>
     </property>
     <property name="maximum">
      <number>5000</number>
+    </property>
+    <property name="value">
+     <number>1500</number>
     </property>
    </widget>
    <widget class="QLabel" name="labelipcachesize">
