--- a/arado.qrc
+++ b/arado.qrc
@@ -1,6 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
   <file alias="arado-logo.png">images/arado-logo.png</file>
+  <file alias="arado-logo-colo-128.png">images/arado-logo-colo-128.png</file>
 </qresource>
 <qresource prefix="/help">
   <file alias="LICENSE.txt">helpfiles/LICENSE.txt</file>
