--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -36,7 +36,7 @@
      </size>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_database">
      <attribute name="title">
@@ -207,9 +207,6 @@
         <attribute name="headerDefaultSectionSize">
          <number>200</number>
         </attribute>
-        <attribute name="headerDefaultSectionSize">
-         <number>200</number>
-        </attribute>
         <column>
          <property name="text">
           <string>SHA1</string>
@@ -255,9 +252,6 @@
       <attribute name="headerDefaultSectionSize">
        <number>100</number>
       </attribute>
-      <attribute name="headerDefaultSectionSize">
-       <number>100</number>
-      </attribute>
       <column>
        <property name="text">
         <string>Device-ID</string>
@@ -286,9 +280,6 @@
       <attribute name="headerDefaultSectionSize">
        <number>100</number>
       </attribute>
-      <attribute name="headerDefaultSectionSize">
-       <number>100</number>
-      </attribute>
       <column>
        <property name="text">
         <string>Device-ID</string>
@@ -314,9 +305,6 @@
         <height>421</height>
        </rect>
       </property>
-      <attribute name="headerDefaultSectionSize">
-       <number>100</number>
-      </attribute>
       <attribute name="headerDefaultSectionSize">
        <number>100</number>
       </attribute>
@@ -713,6 +701,22 @@
       </property>
       <property name="text">
        <string>Add to Trusted</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_5">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>500</y>
+        <width>75</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>Asks connected devices for their trusted, recomended and random Device IP-Lists. Trusted Devices are transferred to Recommended List. All other into Random List.</string>
+      </property>
+      <property name="text">
+       <string>IP-Transfer</string>
       </property>
      </widget>
     </widget>
