--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -274,7 +274,7 @@
         <x>350</x>
         <y>40</y>
         <width>281</width>
-        <height>421</height>
+        <height>481</height>
        </rect>
       </property>
       <attribute name="headerDefaultSectionSize">
@@ -302,7 +302,7 @@
         <x>660</x>
         <y>40</y>
         <width>281</width>
-        <height>421</height>
+        <height>481</height>
        </rect>
       </property>
       <attribute name="headerDefaultSectionSize">
@@ -568,6 +568,9 @@
         <height>23</height>
        </rect>
       </property>
+      <property name="toolTip">
+       <string>Removes a trusted IP from the list.</string>
+      </property>
       <property name="text">
        <string>Remove Device</string>
       </property>
@@ -575,11 +578,14 @@
      <widget class="QPushButton" name="pushButton_2">
       <property name="geometry">
        <rect>
-        <x>350</x>
-        <y>470</y>
+        <x>220</x>
+        <y>500</y>
         <width>101</width>
         <height>23</height>
        </rect>
+      </property>
+      <property name="toolTip">
+       <string>Adds an IP from recommended or random list to trusted list.</string>
       </property>
       <property name="text">
        <string>Add to Trusted</string>
@@ -593,6 +599,9 @@
         <width>141</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="toolTip">
+       <string>Enter the Device-IP, the DHT will find the current IP.</string>
       </property>
       <property name="text">
        <string>Add Device ID</string>
@@ -690,19 +699,6 @@
        <number>65535</number>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_4">
-      <property name="geometry">
-       <rect>
-        <x>660</x>
-        <y>470</y>
-        <width>101</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Add to Trusted</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
@@ -713,7 +709,7 @@
        </rect>
       </property>
       <property name="toolTip">
-       <string>Asks connected devices for their trusted, recomended and random Device IP-Lists. Trusted Devices are transferred to Recommended List. All other into Random List.</string>
+       <string>Asks connected devices for their trusted, recommended and random Device-IP-Lists. Trusted Devices are transfered to Recommended List. All other into Random List.</string>
       </property>
       <property name="text">
        <string>IP-Transfer</string>
@@ -972,6 +968,111 @@
       </property>
       <property name="text">
        <string>Save</string>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="addport_4">
+      <property name="geometry">
+       <rect>
+        <x>470</x>
+        <y>80</y>
+        <width>151</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>190</red>
+            <green>190</green>
+            <blue>190</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>239</red>
+            <green>235</green>
+            <blue>231</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
+      <property name="toolTip">
+       <string>Add the referring port of the entered IP.</string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+      <property name="buttonSymbols">
+       <enum>QAbstractSpinBox::NoButtons</enum>
+      </property>
+      <property name="maximum">
+       <number>65535</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelmyport_2">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>80</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>My Device-ID</string>
       </property>
      </widget>
     </widget>
