--- a/ui/aradomain.ui
+++ b/ui/aradomain.ui
@@ -36,7 +36,7 @@
      </size>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_database">
      <attribute name="title">
@@ -249,7 +249,7 @@
         <x>20</x>
         <y>70</y>
         <width>301</width>
-        <height>201</height>
+        <height>261</height>
        </rect>
       </property>
       <attribute name="headerDefaultSectionSize">
@@ -280,7 +280,7 @@
         <x>350</x>
         <y>70</y>
         <width>281</width>
-        <height>411</height>
+        <height>381</height>
        </rect>
       </property>
       <attribute name="headerDefaultSectionSize">
@@ -311,7 +311,7 @@
         <x>640</x>
         <y>70</y>
         <width>281</width>
-        <height>381</height>
+        <height>351</height>
        </rect>
       </property>
       <attribute name="headerDefaultSectionSize">
@@ -400,7 +400,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>370</y>
+        <y>410</y>
         <width>120</width>
         <height>20</height>
        </rect>
@@ -488,7 +488,7 @@
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>370</y>
+        <y>410</y>
         <width>141</width>
         <height>20</height>
        </rect>
@@ -504,7 +504,7 @@
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>370</y>
+        <y>410</y>
         <width>35</width>
         <height>20</height>
        </rect>
@@ -595,9 +595,9 @@
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>500</y>
-        <width>101</width>
+        <x>350</x>
+        <y>460</y>
+        <width>91</width>
         <height>23</height>
        </rect>
       </property>
@@ -613,7 +613,7 @@
        <rect>
         <x>350</x>
         <y>500</y>
-        <width>571</width>
+        <width>281</width>
         <height>23</height>
        </rect>
       </property>
@@ -628,7 +628,7 @@
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>400</y>
+        <y>440</y>
         <width>141</width>
         <height>21</height>
        </rect>
@@ -644,7 +644,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>400</y>
+        <y>440</y>
         <width>151</width>
         <height>20</height>
        </rect>
@@ -735,9 +735,9 @@
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>500</y>
-        <width>101</width>
+        <x>450</x>
+        <y>460</y>
+        <width>81</width>
         <height>23</height>
        </rect>
       </property>
@@ -860,7 +860,7 @@
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>430</y>
+        <y>470</y>
         <width>141</width>
         <height>21</height>
        </rect>
@@ -876,7 +876,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>430</y>
+        <y>470</y>
         <width>151</width>
         <height>20</height>
        </rect>
@@ -968,7 +968,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>460</y>
+        <y>500</y>
         <width>151</width>
         <height>20</height>
        </rect>
@@ -1060,7 +1060,7 @@
       <property name="geometry">
        <rect>
         <x>180</x>
-        <y>460</y>
+        <y>500</y>
         <width>141</width>
         <height>21</height>
        </rect>
@@ -1097,7 +1097,7 @@
      <widget class="QLabel" name="labelipcachesize_3">
       <property name="geometry">
        <rect>
-        <x>650</x>
+        <x>640</x>
         <y>460</y>
         <width>221</width>
         <height>20</height>
@@ -1111,7 +1111,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>310</y>
+        <y>380</y>
         <width>231</width>
         <height>20</height>
        </rect>
@@ -1124,7 +1124,7 @@
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>310</y>
+        <y>380</y>
         <width>40</width>
         <height>20</height>
        </rect>
@@ -1137,7 +1137,7 @@
       <property name="geometry">
        <rect>
         <x>250</x>
-        <y>290</y>
+        <y>360</y>
         <width>60</width>
         <height>20</height>
        </rect>
@@ -1156,21 +1156,21 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>290</y>
-        <width>211</width>
+        <y>340</y>
+        <width>91</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>My Port:</string>
+       <string>Internal IP+Port</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_savesettings_2">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>340</y>
-        <width>301</width>
+        <x>640</x>
+        <y>500</y>
+        <width>281</width>
         <height>23</height>
        </rect>
       </property>
@@ -1184,8 +1184,8 @@
      <widget class="QPushButton" name="pushButton_7">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>500</y>
+        <x>550</x>
+        <y>460</y>
         <width>75</width>
         <height>23</height>
        </rect>
@@ -1195,6 +1195,227 @@
       </property>
       <property name="text">
        <string>Copy ID</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="geometry">
+       <rect>
+        <x>640</x>
+        <y>430</y>
+        <width>271</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Disable Random Device Connections</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="addip_3">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>360</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>190</red>
+            <green>190</green>
+            <blue>190</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>239</red>
+            <green>235</green>
+            <blue>231</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
+      <property name="font">
+       <font>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="toolTip">
+       <string>Enter any online  IP-Adress of your network, if the IP-cache is empty.</string>
+      </property>
+      <property name="inputMask">
+       <string>999.999.999.999; </string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="addip_4">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>340</y>
+        <width>111</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="palette">
+       <palette>
+        <active>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </active>
+        <inactive>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>85</red>
+            <green>170</green>
+            <blue>255</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>0</red>
+            <green>0</green>
+            <blue>0</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </inactive>
+        <disabled>
+         <colorrole role="Text">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>190</red>
+            <green>190</green>
+            <blue>190</blue>
+           </color>
+          </brush>
+         </colorrole>
+         <colorrole role="Base">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>239</red>
+            <green>235</green>
+            <blue>231</blue>
+           </color>
+          </brush>
+         </colorrole>
+        </disabled>
+       </palette>
+      </property>
+      <property name="font">
+       <font>
+        <kerning>true</kerning>
+       </font>
+      </property>
+      <property name="toolTip">
+       <string>Enter any online  IP-Adress of your network, if the IP-cache is empty.</string>
+      </property>
+      <property name="inputMask">
+       <string>999.999.999.999; </string>
+      </property>
+      <property name="frame">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QSpinBox" name="myport_3">
+      <property name="geometry">
+       <rect>
+        <x>250</x>
+        <y>340</y>
+        <width>60</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="toolTip">
+       <string>You need to forward this port in your NAT/router, if you want to connect.</string>
+      </property>
+      <property name="maximum">
+       <number>65535</number>
+      </property>
+      <property name="value">
+       <number>4430</number>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelmyport_3">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>360</y>
+        <width>91</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>External IP+Port</string>
       </property>
      </widget>
     </widget>
