--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -113,6 +113,9 @@
          <height>341</height>
         </rect>
        </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
