--- a/ui/entry-form.ui
+++ b/ui/entry-form.ui
@@ -34,7 +34,7 @@
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Description</string>
+      <string>Title / Description</string>
      </property>
     </widget>
    </item>
