clear instead of cancel

--- a/ui/entry-form.ui
+++ b/ui/entry-form.ui
@@ -83,7 +83,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Cancel</string>
+      <string>Clear</string>
      </property>
     </widget>
    </item>
