--- a/ui/url-display.ui
+++ b/ui/url-display.ui
@@ -23,8 +23,8 @@
       <string/>
      </property>
      <property name="icon">
-      <iconset>
-       <normaloff>../../../../Users/extensa/.designer/arado-logo-coloured.png</normaloff>../../../../Users/extensa/.designer/arado-logo-coloured.png</iconset>
+      <iconset resource="../arado.qrc">
+       <normaloff>:/arado-logo-colo-128.png</normaloff>:/arado-logo-colo-128.png</iconset>
      </property>
      <property name="iconSize">
       <size>
@@ -189,6 +189,8 @@
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../arado.qrc"/>
+ </resources>
  <connections/>
 </ui>
