--- a/ui/entry-form.ui
+++ b/ui/entry-form.ui
@@ -109,6 +109,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <layoutdefault spacing="2" margin="2"/>
+ <resources>
+  <include location="../arado.qrc"/>
+ </resources>
  <connections/>
 </ui>
